[gd_scene load_steps=18 format=2]

[ext_resource path="res://SnowballFight/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://SnowballFight/Walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://SnowballFight/Level.gd" type="Script" id=3]
[ext_resource path="res://Assets/SnowballGame/Snowball.png" type="Texture" id=4]
[ext_resource path="res://Assets/FallGame/Sprites/Heart2.png" type="Texture" id=5]
[ext_resource path="res://Assets/FallGame/Sprites/Heart1.png" type="Texture" id=6]
[ext_resource path="res://Assets/FallGame/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/SnowballGame/Wall.png" type="Texture" id=8]
[ext_resource path="res://Assets/SnowballGame/Floor.png" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 10, 10 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, -5 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_texture = ExtResource( 8 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 50, 50 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, -25 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "full",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Level" type="Spatial"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="Floor"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Wall1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 25, -25 )

[node name="MeshInstance" type="MeshInstance" parent="Wall1"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Wall1"]
shape = SubResource( 6 )

[node name="Wall2" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -25, 25, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Wall2"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Wall2"]
shape = SubResource( 6 )

[node name="Wall4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 25, 25, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Wall4"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Wall4"]
shape = SubResource( 6 )

[node name="Wall3" type="StaticBody" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 25, 25 )

[node name="MeshInstance" type="MeshInstance" parent="Wall3"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Wall3"]
shape = SubResource( 6 )

[node name="Walls" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875129, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Snowballs" type="Node" parent="CanvasLayer"]

[node name="ball1" type="Sprite" parent="CanvasLayer/Snowballs"]
position = Vector2( 64, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="ball2" type="Sprite" parent="CanvasLayer/Snowballs"]
position = Vector2( 128, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="ball3" type="Sprite" parent="CanvasLayer/Snowballs"]
position = Vector2( 192, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="ball4" type="Sprite" parent="CanvasLayer/Snowballs"]
position = Vector2( 256, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="ball5" type="Sprite" parent="CanvasLayer/Snowballs"]
position = Vector2( 320, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Health" type="Node" parent="CanvasLayer"]

[node name="h1" type="AnimatedSprite" parent="CanvasLayer/Health"]
position = Vector2( 64, 128 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "full"

[node name="h2" type="AnimatedSprite" parent="CanvasLayer/Health"]
position = Vector2( 128, 128 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "full"

[node name="h3" type="AnimatedSprite" parent="CanvasLayer/Health"]
position = Vector2( 192, 128 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "full"

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 168.0
margin_right = 108.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 8 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="green_spawned" from="." to="Player" method="_on_Level_green_spawned"]
[connection signal="red_spawned" from="." to="Player" method="_on_Level_red_spawned"]
[connection signal="yellow_spawned" from="." to="Player" method="_on_Level_yellow_spawned"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
